--- a/conf/application.conf
+++ b/conf/application.conf
@@ -12,7 +12,7 @@ application.secret="C6[?uXeZoh^86;2B^R715jdVgMw[l_9L<jDP94Qk5foZkij5wAP?A><Tu=wY
 
 # The application languages
 # ~~~~~
-application.langs="en"
+application.langs="en,bg"
 
 # Global object class
 # ~~~~~
